rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__filter_member_operand__equals_false_on_and_dimension.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/filter_member_operand.rs
expression: result
---
orders__count
-------------
5
