rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__filter_member_operand__equals_on_calculated_boolean_measure.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/filter_member_operand.rs
expression: result
---
orders__status
--------------
cancelled     
completed     
pending
