rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__filter_member_operand__not_set_on_or_dimension.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/filter_member_operand.rs
expression: result
---
customers__id
-------------
3
